@@ -1,6 +1,6 @@
 <window>
     <defaultcontrol always="true">996</defaultcontrol>
-    <include>OpenCloseAnimationContext</include>
+    <include condition="Window.IsVisible(favourites) | Window.IsVisible(filemanager) | Window.IsVisible(musicplaylisteditor) | Window.IsVisible(LockSettings) | Window.IsVisible(addoninformation) + !Window.IsVisible(home) | Window.IsVisible(pvrchannelmanager)">OpenCloseAnimationContext</include>
     <include condition="!Window.IsVisible(favourites) + !Window.IsVisible(filemanager) + !Window.IsVisible(musicplaylisteditor) + !Window.IsVisible(LockSettings) + !Window.IsVisible(addoninformation) + !Window.IsVisible(favourites) + !Window.IsVisible(home) + !Window.IsVisible(pvrchannelmanager)">ContextCoordinates</include>
     <animation effect="slide" end="0,256" time="0" condition="Window.IsVisible(LockSettings)">Conditional</animation>
     
